# MAYE

./: README.md  pyproject.toml  requirements.txt
datasets/geometry3k/: geometry3k_rl_v0.jsonl  geometry3k_test_v0.jsonl  geometry3k_validation_v0.jsonl
datasets/mm_math/: math_verse_test_v0.jsonl  mm_math_validation_v0.jsonl
maye/datasets/: __init__.py  math.py  math_utils.py
maye/rlhf/: __init__.py  rewards.py  sequence_processing.py  types.py
maye/rlhf/loss/: __init__.py  ppo.py
maye/training/: __init__.py  activation_offloading.py  activations.py  compile.py  distributed.py  lr_schedulers.py  memory.py  metric_logging.py  model_util.py  precision.py  seed.py
maye/utils/: __init__.py  collate.py  device.py  file.py  generation.py  logging.py
recipes/: full_ppo_vllm_distributed.py
recipes/configs/: full_ppo_vllm_distributed.yaml
scripts/: train_ppo_vllm_distributed.sh
